kubernetes/overlays/dev/app-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-platform-app
spec:
  template:
    metadata:
      labels:
        version: 1.1.1
      annotations:
        database-secret-generation: "1"
